# service-catalog

./: .env.example  CLAUDE.md  Makefile  README.md  catalog-dashboard.jsx  catalog-dump.json  catalog-info.yaml  config.py  db.py  docker-compose.yml  ingest.py  init.sql  pyproject.toml  ruff.toml  run.sh  server.py  setup.sh  test_catalog.py
.claude/: settings.local.json
catalog_cli/: config.py  db.py  genai.py  main.py
db/: init.sql
docs/: rag-pipeline.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx
mnt/user-data/outputs/catalog-cli/examples/notification-worker/: catalog-info.yaml
mnt/user-data/outputs/catalog-cli/examples/user-auth-service/: catalog-info.yaml
services/inventory-service/: catalog-info.yaml
services/notification-service/: catalog-info.yaml
services/order-service/: catalog-info.yaml
tests/: test_catalog.py
